# spbu-se2020-autumn-tests

./: .gitignore  README.md
cmocka_test/: CMakeLists.txt  main.c  main_test.c
cmocka_test/src/: CMakeLists.txt  main.c  redefinition.h
cmocka_test/test/: CMakeLists.txt  test_main.c
cmocka_test/test/data/: test4.txt  test5.txt
